--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="app/app.css">
 
-    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <!--<script src="node_modules/zone.js/dist/zone.js"></script>-->
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
 
