move typescript from dep to devdep

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="utf-8">
 
-    <title>ToDo List</title>
+    <title>Angular 2 • TodoMVC</title>
     <meta name="description" content="ToDo Listd">
     <meta name="author" content="Sean Nguyen">
 
+    <link rel="stylesheet" href="node_modules/todomvc-common/base.css">
+    <link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
     <link rel="stylesheet" href="app/app.css">
-
+    
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
@@ -23,6 +25,6 @@
 </head>
 
 <body>
-<todo-app>Loading...</todo-app>
+    <todo-app>Loading...</todo-app>
 </body>
 </html>
