--- a/app/app.html
+++ b/app/app.html
@@ -1,33 +1,33 @@
 <section class="todoapp">
     <header class="header">
         <h1>todos</h1>
-        <input class="new-todo" placeholder="What needs to be done?" autofocus #newTodoItem (keyup.enter)="addTodoItem(newTodoItem.value); newTodoItem.value = ''">
+        <input class="new-todo" placeholder="What needs to be done?" autofocus [(ngModel)]="newTodo.title" (keyup.enter)="addTodoItem()">
     </header>
     <!-- This section should be hidden by default and shown when there are todos -->
-    <section class="main" [hidden]="todoItems.length === 0">
+    <section class="main" [hidden]="todos.length === 0">
         <input id="toggle-all" class="toggle-all" type="checkbox">
         <label for="toggle-all">Mark all as complete</label>
         <ul class="todo-list">
-            <li class="completed">
-                <div class="view">
-                    <input class="toggle" type="checkbox" checked>
-                    <label>Taste JavaScript</label>
-                    <button class="destroy"></button>
-                </div>
-                <input class="edit" value="Create a TodoMVC template">
-            </li>
-            <!--<li>-->
+            <!--<li class="completed">-->
                 <!--<div class="view">-->
-                    <!--<input class="toggle" type="checkbox">-->
-                    <!--<label>Buy a unicorn</label>-->
+                    <!--<input class="toggle" type="checkbox" checked>-->
+                    <!--<label>Taste JavaScript</label>-->
                     <!--<button class="destroy"></button>-->
                 <!--</div>-->
-                <!--<input class="edit" value="Rule the web">-->
+                <!--<input class="edit" value="Create a TodoMVC template">-->
             <!--</li>-->
+            <li *ngFor="let todo of todos" [class.completed]="todo.completed">
+                <div class="view">
+                    <input class="toggle" type="checkbox" [(ngModel)]="todo.completed">
+                    <label>{{todo.title}}</label>
+                    <button class="destroy"></button>
+                </div>
+                <input class="edit" value="Rule the web">
+            </li>
         </ul>
     </section>
     <!-- This footer should hidden by default and shown when there are todos -->
-    <footer class="footer" [hidden]="todoItems.length === 0">
+    <footer class="footer" [hidden]="todos.length === 0">
         <!-- This should be `0 items left` by default -->
         <span class="todo-count"><strong>0</strong> item left</span>
         <!-- Remove this if you don't implement routing -->
