moved all source file to

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
     <meta name="description" content="ToDo Listd">
     <meta name="author" content="Sean Nguyen">
 
-    <link rel="stylesheet" href="node_modules/todomvc-common/base.css">
-    <link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
+    <link rel="stylesheet" href="/vendors/todomvc-common/base.css">
+    <link rel="stylesheet" href="/vendors/todomvc-app-css/index.css">
     
-    <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="/vendors/zone.js/dist/zone.js"></script>
+    <script src="/vendors/reflect-metadata/Reflect.js"></script>
+    <script src="/vendors/systemjs/dist/system.src.js"></script>
 
     <script src="systemjs.config.js"></script>
     <script>
