--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="ToDo Listd">
     <meta name="author" content="Sean Nguyen">
 
+    <base href=".">
+
     <link rel="stylesheet" href="/vendors/todomvc-common/base.css">
     <link rel="stylesheet" href="/vendors/todomvc-app-css/index.css">
     
